<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:gravity="center">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@color/white"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            app:tint="@color/black"
            android:contentDescription="@string/back" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/favourite_empty_icon"
            android:layout_marginEnd="5dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favorite" />
    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"
        android:src="@drawable/splash_screen"/>
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/prev_icon"
            app:iconSize="40dp"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"
            android:layout_marginHorizontal="25dp"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start_text"
            android:gravity="center"
            />
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/end_text"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/repeat_icon"
            app:tint="@color/cool_pink"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/equalizer_icon"
            android:layout_marginEnd="5dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/equalizer_btn" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:src="@drawable/timer_icon"
            app:tint="@android:color/holo_red_dark" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/share_icon"
            android:layout_marginEnd="5dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/share_btn" />
    </LinearLayout>

</LinearLayout>